--- a/web/index.html
+++ b/web/index.html
@@ -1,46 +1,106 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="/">
+    <base href="/" />
     <meta charset="UTF-8" />
-    <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="description" content="A new Flutter project." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>streetaibility</title>
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <style>
-      .map-grid {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2) 1px, transparent 1px),
-                          linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 1px, transparent 1px);
-        background-size: 20px 20px;
-        z-index: 1000;
-      }
-    </style>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHGRuC1WdGXgkZReqtvi7Hdp8d7-H2ncM&callback=initMap" async defer></script>
+    <!-- ✅ Google Maps API -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHGRuC1WdGXgkZReqtvi7Hdp8d7-H2ncM&callback=initMap"
+      async defer>
+    </script>
 
+    <!-- ✅ Dynamic Grid Overlay Script -->
     <script>
       function initMap() {
         const map = new google.maps.Map(document.getElementById("map"), {
           center: { lat: 37.7749, lng: -122.4194 },
           zoom: 18,
+          mapTypeId: 'roadmap',
         });
 
-        const grid = document.createElement("div");
-        grid.className = "map-grid";
-        document.getElementById("map").appendChild(grid);
+        class GridOverlay extends google.maps.OverlayView {
+          constructor(map) {
+            super();
+            this.map = map;
+            this.setMap(map);
+          }
+
+          draw() {
+            const projection = this.getProjection();
+            const bounds = this.map.getBounds();
+            if (!bounds) return;
+
+            const topLeft = projection.fromLatLngToDivPixel(bounds.getNorthEast());
+            const bottomRight = projection.fromLatLngToDivPixel(bounds.getSouthWest());
+
+            const div = this.div || document.createElement("div");
+            div.innerHTML = "";
+            div.style.position = "absolute";
+            div.style.left = `${bottomRight.x}px`;
+            div.style.top = `${topLeft.y}px`;
+            div.style.width = `${topLeft.x - bottomRight.x}px`;
+            div.style.height = `${bottomRight.y - topLeft.y}px`;
+
+            const gridSizeMeters = 20;
+            const spacingLatLng = metersToLatLng(gridSizeMeters);
+
+            const latStart = bounds.getSouthWest().lat();
+            const latEnd = bounds.getNorthEast().lat();
+            const lngStart = bounds.getSouthWest().lng();
+            const lngEnd = bounds.getNorthEast().lng();
+
+            for (let lat = latStart; lat <= latEnd; lat += spacingLatLng.lat) {
+              const line = document.createElement("div");
+              line.style.position = "absolute";
+              line.style.left = "0";
+              line.style.width = "100%";
+              const p = projection.fromLatLngToDivPixel(new google.maps.LatLng(lat, lngStart));
+              line.style.top = `${p.y - topLeft.y}px`;
+              line.style.height = "1px";
+              line.style.background = "rgba(0,0,0,0.2)";
+              div.appendChild(line);
+            }
+
+            for (let lng = lngStart; lng <= lngEnd; lng += spacingLatLng.lng) {
+              const line = document.createElement("div");
+              line.style.position = "absolute";
+              line.style.top = "0";
+              line.style.height = "100%";
+              const p = projection.fromLatLngToDivPixel(new google.maps.LatLng(latStart, lng));
+              line.style.left = `${p.x - bottomRight.x}px`;
+              line.style.width = "1px";
+              line.style.background = "rgba(0,0,0,0.2)";
+              div.appendChild(line);
+            }
+
+            if (!this.div) {
+              this.div = div;
+              this.getPanes().overlayLayer.appendChild(this.div);
+            }
+          }
+        }
+
+        function metersToLatLng(meters) {
+          const lat = meters / 111320;
+          const lng = meters / (111320 * Math.cos((map.getCenter().lat() * Math.PI) / 180));
+          return { lat, lng };
+        }
+
+        new GridOverlay(map);
       }
     </script>
   </head>
+
   <body>
+    <div id="map" style="width: 100vw; height: 100vh;"></div>
     <script src="flutter_bootstrap.js" async></script>
   </body>
 </html>
