--- a/web/index.html
+++ b/web/index.html
@@ -3,39 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <title>StreetAIbility</title>
-
-    <!-- Ensure Google Maps API is loaded from localStorage key -->
-    <script>
-      const injectedMapToken = localStorage.getItem("MAP_CREDENTIAL");
-
-      if (injectedMapToken && injectedMapToken.trim() !== "") {
-        const script = document.createElement("script");
-        script.src = `https://maps.googleapis.com/maps/api/js?key=${injectedMapToken}`;
-        script.defer = true;
-        script.async = true;
-        document.head.appendChild(script);
-      } else {
-        console.warn("⚠️ Map credential is not configured in localStorage.");
-      }
-    </script>
-
+    <meta name="description" content="Urban street redesign web app using Flutter and Google Maps." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       html,
       body {
         margin: 0;
         padding: 0;
         height: 100%;
+        width: 100%;
         overflow: hidden;
       }
-
-      #map {
-        width: 100%;
-        height: 100%;
-      }
     </style>
+    <!-- ✅ Load Google Maps JavaScript SDK -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY"></script>
   </head>
-
   <body>
     <script src="main.dart.js"></script>
   </body>
-</html>
+</html> 
